--- a/modules/integration_azure-event-hub/conf/readme.yaml
+++ b/modules/integration_azure-event-hub/conf/readme.yaml
@@ -1,6 +1,9 @@
 documentations:
   - name: Azure Monitor metrics
-    url: 'https://docs.microsoft.com/en-us/azure/azure-monitor/platform/metrics-supported'
+    url: 'https://docs.microsoft.com/en-us/azure/azure-monitor/platform/metrics-supported#microsofteventhubclusters'
+  - name: Splunk Observability metrics
+    url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/azure/azure-metrics.html#azure-event-hubs-metrics'
+
 notes: |
   ### About `throttled_requests` detector
 
