--- a/modules/integration_azure-redis/conf/readme.yaml
+++ b/modules/integration_azure-redis/conf/readme.yaml
@@ -1,3 +1,5 @@
 documentations:
   - name: Azure Monitor metrics
-    url: 'https://docs.microsoft.com/en-us/azure/azure-monitor/platform/metrics-supported'
+    url: 'https://docs.microsoft.com/en-us/azure/azure-monitor/platform/metrics-supported#microsoftcacheredis'
+  - name: Splunk Observability metrics
+    url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/azure/azure-metrics.html#azure-redis-metrics'
