--- a/modules/integration_azure-mariadb/conf/readme.yaml
+++ b/modules/integration_azure-mariadb/conf/readme.yaml
@@ -1,3 +1,3 @@
 documentations:
-  - name: Azure Monitor metrics for MariaDB
+  - name: Azure Monitor metrics
     url: 'https://docs.microsoft.com/en-us/azure/azure-monitor/essentials/metrics-supported#microsoftdbformariadbservers'
