--- a/modules/integration_gcp-compute-engine/conf/readme.yaml
+++ b/modules/integration_gcp-compute-engine/conf/readme.yaml
@@ -1,12 +1,14 @@
 documentations:
   - name: Stackdriver metrics
     url: 'https://cloud.google.com/monitoring/api/metrics_gcp#gcp-compute'
+  - name: Splunk Observability metrics
+    url: 'https://docs.splunk.com/Observability/gdi/get-data-in/connect/gcp.html#google-compute-engine-metrics'
 
 notes: |
   ### Metadata configuration for default filtering
 
   While SignalFx does not support `label` sync from GCE the default filtering policy relies on `metadata` instead.
-  Therefore, if you keep the default filter (if you don't define `filter_custom_includes` or `filter_custom_excludes`) you **need** to add those metadata to your GCP computes instances :
+  Therefore, if you keep the default filter (if you don't define `filtering_custom` variable) you **need** to add those metadata to your GCP computes instances :
 
   * sfx_env=true
   * sfx_monitored=true
@@ -21,7 +23,10 @@ notes: |
   * via terraform, [at the instance level](https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_instance#metadata)
   * via terraform, [at the project level](https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_project_metadata)
 
-  You also **need** to check if those metadata are in the metadata whitelist in your [SignalFx GCP integration](https://docs.signalfx.com/en/latest/integrations/google-cloud-platform.html#compute-engine-instance).
+  You also **need** to check if those metadata are in the metadata `includeList` in your [SignalFx GCP
+  integration](https://dev.splunk.com/observability/docs/integrations/gcp_integration_overview/#Optional-fields).
+  You can configure this from [Claranet Terraform module for GCP
+  integration](https://github.com/claranet/terraform-signalfx-integrations/tree/master/cloud/gcp#input_gcp_compute_metadata_whitelist).
 
   ### About disk detectors
 
