--- a/modules/smart-agent_http/conf/readme.yaml
+++ b/modules/smart-agent_http/conf/readme.yaml
@@ -50,7 +50,7 @@ notes: |
 
   * If you have multiple webhecks which require different sensitivity level so you can add
   common dimension using `addExtraDimensions` to set of similar monitors on agent. Then,
-  you can import as many times this module with different value for `filter_custom_*` variables
+  you can import as many times this module with different value for `filtering_custom` variable
   to match these different dimension(s) value(s).
 
   * The certificate metrics will be collected only if `useHTTPS: true` (or if using the
